--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -24,6 +24,7 @@ body {
 #top_nav {
   background-color: #ECF1EF;  
   padding: 0.05em 0em;
+  border-bottom: 1px solid #A2B5CD;
 }
 .logo {
     color: #00688B;
@@ -63,4 +64,16 @@ body {
   color: #fff;
   text-decoration:none;
   border: 1px solid #FFF;     
+}
+
+#flash_bar {
+  border-top: 2px solid #FDF5E6;
+  padding-left: 5px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  font-size: 14px;
+  font-weight: bold;
+  font-family: Trebuchet MS;
+  color: #FDF5E6;
+  background-color: #6B8E23;
 }
